--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
         <ul>
           <li><a href="#">Nosso Trabalho</a></li>
           <li>
-            <a href="#"><li>Infraestrutura</li></a>
+            <a href="#">Infraestrutura</a>
           </li>
           <li>
-            <a href="#"><li>Nossas unidades</li></a>
+            <a href="#">Nossas unidades</a>
           </li>
           <li>
-            <a href="#"><li>Especialistas</li></a>
+            <a href="#">Especialistas</a>
           </li>
         </ul>
       </nav>
@@ -127,16 +127,16 @@
         <h3>Unidades</h3>
         <ul>
           <li>
-            <a href="#"><li>Clínica Rj</li></a>
+            <a href="#">Clínica Rj</a>
           </li>
           <li>
-            <a href="#"><li>Clínica Sp</li></a>
+            <a href="#">Clínica Sp</a>
           </li>
           <li>
-            <a href="#"><li>Clínica Es</li></a>
+            <a href="#">Clínica Es</a>
           </li>
           <li>
-            <a href="#"><li>Clínica Sc</li></a>
+            <a href="#">Clínica Sc</a>
           </li>
         </ul>
       </nav>
