--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </section>
       </section>
       <section class="Patrocinios">
-        <p>apoio:</p>
+        <p class="apoio">apoio:</p>
         <h3 class="Havaianas">Havaianas</h3>
         <h3 class="americanas">americanas</h3>
       </section>
